<resources>
    <string name="app_name">Just Java</string>
    <!--Header text for list of toppings -->
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="zero_dollars">0</string>
    <string name="submit_order">Submit</string>

    <string name="persons">"Name: "</string>

    <string name="thank_you">Thank You</string>
    <string name="added_whipped_cream">"Added Whipped Cream: "</string>
    <string name="added_chocolate">"Added Chocolate: "</string>
    <string name="quantity_ordered">"Quantity: "</string>
    <string name="total_price">"Total: "</string>

    <!--Thank you message in order summary-->
    <!--<string name="thank_you">Thank You!</string>
    &lt;!&ndash;Toral price in oder summary&ndash;&gt;
    <string name="total_price">Total: $</string>
    <string name="quantity_summary">Quantity: </string>-->

</resources>
